# richme

./: .env.example  .gitignore  README.md  compose.yaml
.cursor/plans/: richme_docker与四步实施_d836a99e.plan.md  richme_全栈_mvp_68b14d57.plan.md
.cursor/rules/: tooling-and-confirm.md
api/: README.md  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 31ea0922d2b7_initial_domain_schema.py
api/src/richme_api/: __init__.py  config.py  main.py  security.py  time_utils.py
api/src/richme_api/api/: deps.py
api/src/richme_api/api/v1/: admin_auth.py  admin_stocks.py  admin_themes.py  public_themes.py  router.py
api/src/richme_api/db/: __init__.py  session.py
api/src/richme_api/models/: __init__.py  concept.py  stock.py  theme.py
api/src/richme_api/schemas/: __init__.py  auth.py  stock.py  theme.py
api/tests/: conftest.py  test_step3.py
apps/web/: README.md  index.html  package.json  pnpm-lock.yaml
apps/web/src/: App.tsx
apps/web/src/components/: Layout.tsx  ThemeTree.tsx
apps/web/src/lib/: api.ts  auth.ts  config.ts
apps/web/src/pages/: AdminLoginPage.tsx  AdminPage.tsx  MarketPage.tsx
apps/web/src/types/: api.ts
docs/: cloud_info.md
docs/plans/: 01-scaffold.md  02-database-orm.md  03-api.md  04-web-ui.md  MAINTAINER.md  README.md
